Added Auto-Calculator & Format
Added a auto-calculate function using Jquery in the form where lecturers can submit claims. It is declared as read-only so the user may not be able to change the value.

Added a Validate User Access Level, to only allow lecturers to submit claims.

Document: Formatted the Home Controller for easier readability.

--- a/CMCS Web App/Views/Home/Index.cshtml
+++ b/CMCS Web App/Views/Home/Index.cshtml
@@ -24,6 +24,18 @@
     </div>
 
     <div class="box">
+        @if (TempData["UsersExist"] != null)
+        {
+            <div class="alert alert-danger">
+                @TempData["UsersExist"]
+            </div>
+        }
+        @if (TempData["UsersCreated"] != null)
+        {
+            <div class="alert alert-success">
+                @TempData["UsersCreated"]
+            </div>
+        }
         <form asp-controller="Home" asp-action="CreateUserSamples">
             <button class="btn" type="submit">Create Users</button>
         </form>
