--- a/CMCS Web App/wwwroot/css/site.css
+++ b/CMCS Web App/wwwroot/css/site.css
@@ -71,7 +71,7 @@ footer {
 }
 
     .navbar a {
-        color: #fff;
+        color: #000;
         font-size: 20px;
         margin-left: 40px;
         text-decoration: none;
@@ -79,9 +79,9 @@ footer {
     }
 
         .navbar a::before {
-            color: #fff;
+            color: #000;
             content: '';
-            background-color: #fff;
+            background-color: #000;
             width: 0;
             height: 2px;
             top: 100%;
@@ -209,6 +209,16 @@ footer {
     border: 2px solid rgba(255, 255, 255, .4);
 }
 
+    .form-box h1 {
+        font-size: 36px;
+        margin-bottom: 10px;
+        color: #fff;
+    }
+
+    .form-box p {
+        margin-top: 15px;
+    }
+
 .form-box hr {
     color: transparent;
 }
@@ -231,7 +241,7 @@ footer {
     .input-box label {
         position: absolute;
         top: 50%;
-        left: 5px;
+        left: 0px;
         transform: translateY(-50%);
         pointer-events: none;
         transition: .5s;
@@ -243,7 +253,6 @@ footer {
         outline: none;
         height: 100%;
         width: 100%;
-/*        color: #75ffd3;*/
         color: #fff;
     }
 
@@ -253,15 +262,48 @@ footer {
             opacity: 0.4;
         }
 
-.form-box h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
-    /*    color: #75ffd3;*/
+.input-box-static {
+    position: relative;
+    margin: 25px 0px;
+    height: 50px;
+    width: 100%;
+    border-bottom: 2px solid white;
+    font-size: 18px;
     color: #fff;
+    margin-bottom: 15px;
 }
 
-.form-box p {
-    margin-top: 15px;
+    .input-box-static label {
+        position: absolute;
+        top: 50%;
+        left: 1px;
+        transform: translateY(-50%);
+        pointer-events: none;
+        transition: .5s;
+        top: -5px;
+        opacity: 0.4;
+    }
+
+    .input-box-static input {
+        background: transparent;
+        border: none;
+        outline: none;
+        height: 100%;
+        width: 100%;
+        color: #fff;
+    }
+
+.details-box {
+    display: flex;
+    background-color: rgba(15, 15, 15, 0.8);
+    backdrop-filter: blur(3px);
+    flex-direction: column;
+    justify-content: center;
+    width: 500px;
+    padding: 30px;
+    margin: 15px;
+    border-radius: 15px;
+    border: 2px solid rgba(255, 255, 255, .4);
 }
 
 .btn {
