--- a/CMCS Web App/Views/Home/Login.cshtml
+++ b/CMCS Web App/Views/Home/Login.cshtml
@@ -14,9 +14,10 @@
         <div class="form-box">
             <h1>Staff Roles</h1>
             <p>These buttons have been added, to test the various Roles.  
-               The data for these roles is displayed to the right by the "User Login Details" title.
+               The preset login details for these roles is displayed to the right by 'User Login Details'.
             </p>
-            <p>If these buttons do not work, please ensure you have pressed the 'Create Users' button on the home page.</p>
+            <p>---------------------------></p>
+            <p>If these buttons do not work, please ensure you have pressed the 'Create Test Data' button on the home page.</p>
             <form asp-controller="Home" asp-action="LoginProgrammeCoordinator" method="post">
                 <button class="btn admin" type="submit">Programme Coordinator</button>
             </form>
