--- a/CMCS Web App/Views/Home/TrackAllClaims.cshtml
+++ b/CMCS Web App/Views/Home/TrackAllClaims.cshtml
@@ -7,8 +7,8 @@
     <div class="wrapper">
         <div class="table">
 
-            <h1>Review Requested Claims</h1>
-            <p>Review the list of all requested claims below.</p>
+            <h1>Track All Claims</h1>
+            <p>View all requested claims below.</p>
             <table>
                 <tr>
                     <th>Claim ID</th>
