--- a/CMCS Web App/Views/Home/Login.cshtml
+++ b/CMCS Web App/Views/Home/Login.cshtml
@@ -9,6 +9,13 @@
     </div>
 }
 
+@if (TempData["Logout"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["Logout"]
+    </div>
+}
+
 <div class="page">
     <div class="wrapper">
         <div class="form-box">
