--- a/CMCS Web App/Views/Shared/_Layout.cshtml
+++ b/CMCS Web App/Views/Shared/_Layout.cshtml
@@ -16,12 +16,15 @@
 
         <nav class="navbar">
             <a asp-controller="Home" asp-action="Index">Home</a>
-            <a asp-controller="Home" asp-action="CreateClaim">Submit Claims</a>
-            <a asp-controller="Home" asp-action="ReviewClaim">Review Claims</a>
+            <a asp-controller="Home" asp-action="CreateClaim">Submit Claim</a>
+            <a asp-controller="Home" asp-action="ReviewClaim">Review Flagged Claims</a>
             <a asp-controller="Home" asp-action="TrackAllClaims">Track All Claims</a>
-            <a asp-controller="Home" asp-action="Login">Login</a>
-            <a asp-controller="Home" asp-action="Register">Register</a>
+            <a asp-controller="Home" asp-action="Register">Register New Lecturer</a>
+            <a asp-controller="Home" asp-action="ViewUserClaim">Your Claims</a>
+            <a asp-controller="Home" asp-action="SummarizeClaim">Summarize Claims</a>
             <a asp-controller="Home" asp-action="Account">Account</a>
+            <a asp-controller="Home" asp-action="Login">Login</a>
+            <a asp-controller="Home" asp-action="Logout">Logout</a>
         </nav>
     </header>
 
