Fixed PDF Invoice & Style
Fixed: Issue with generating a PDF, User Object was not included in the claim object, pulled from the database, then being passed to the method.

Updated Style to Website.

--- a/CMCS Web App/Views/Home/Account.cshtml
+++ b/CMCS Web App/Views/Home/Account.cshtml
@@ -41,8 +41,12 @@
                 <label>Faculty</label>
             </div>
             }
-
-            <button class="btn change-password" type="button" id="changePasswordBtn">Change Password</button>
+            <div class="wrapper">
+                <button class="btn change-password" type="button" id="changePasswordBtn">Change Password</button>
+                <form asp-controller="Home" asp-action="logout" method="post">
+                    <button class="btn cancel-change" type="submit">Logout</button>
+                </form>
+            </div>
 
             <div style="display:none;" id="changePasswordModal">
                 <div class="input-box-static">
