--- a/CMCS Web App/Views/Home/SummarizeClaim.cshtml
+++ b/CMCS Web App/Views/Home/SummarizeClaim.cshtml
@@ -44,7 +44,7 @@
                             <td>
                                 <form asp-controller="Home" asp-action="MakePDF" method="post">
                                     <input type="hidden" name="id" value="@claim.UserClaimId" />
-                                    <button class="btn btn-accept" type="submit">Create Invoice</button>
+                                    <button class="btn btn-invoice" type="submit">Create Invoice</button>
                                 </form>
                             </td>
                             <td>
