--- a/CMCS Web App/Views/Shared/_Layout.cshtml
+++ b/CMCS Web App/Views/Shared/_Layout.cshtml
@@ -17,14 +17,13 @@
         <nav class="navbar">
             <a asp-controller="Home" asp-action="Index">Home</a>
             <a asp-controller="Home" asp-action="CreateClaim">Submit Claim</a>
-            <a asp-controller="Home" asp-action="ReviewClaim">Review Flagged Claims</a>
-            <a asp-controller="Home" asp-action="TrackAllClaims">Track All Claims</a>
+            <a asp-controller="Home" asp-action="ReviewClaim">Flagged Claims</a>
+            <a asp-controller="Home" asp-action="TrackAllClaims">Track Claims</a>
             <a asp-controller="Home" asp-action="Register">Register New Lecturer</a>
             <a asp-controller="Home" asp-action="ViewUserClaim">Your Claims</a>
-            <a asp-controller="Home" asp-action="SummarizeClaim">Summarize Claims</a>
+            <a asp-controller="Home" asp-action="SummarizeClaim">Generate Report</a>
             <a asp-controller="Home" asp-action="Account">Account</a>
-            <a asp-controller="Home" asp-action="Login">Login</a>
-            <a asp-controller="Home" asp-action="Logout">Logout</a>
+            <a asp-controller="Home" asp-action="Login"><ion-icon name="person" size="large"></ion-icon></a>
         </nav>
     </header>
 
